# sedutil

./: .gitignore  FEATURES.md  Makefile.am  README.md  build.sh  configure.ac
Common/: DtaAnnotatedDump.cpp  DtaAnnotatedDump.h  DtaCommand.cpp  DtaCommand.h  DtaConstants.h  DtaDev.cpp  DtaDev.h  DtaDevEnterprise.cpp  DtaDevEnterprise.h  DtaDevGeneric.cpp  DtaDevGeneric.h  DtaDevOpal.cpp  DtaDevOpal.h  DtaDevOpal1.cpp  DtaDevOpal1.h  DtaDevOpal2.cpp  DtaDevOpal2.h  DtaDiskType.cpp  DtaDiskType.h  DtaEndianFixup.h  DtaHashPwd.cpp  DtaHashPwd.h  DtaHexDump.cpp  DtaHexDump.h  DtaLexicon.h  DtaOptions.cpp  DtaOptions.h  DtaResponse.cpp  DtaResponse.h  DtaSession.cpp  DtaSession.h  DtaStructures.h  log.h  sedutil.cpp
Common/pbkdf2/: blockwise.c  chash.c  hmac.c  pbkdf2.c  sha512.c
LinuxPBA/: GetPassPhrase.cpp  GetPassPhrase.h  LinuxPBA.cpp  UnlockSEDs.cpp  UnlockSEDs.h
buildroot/: .gitignore  prepare_buildroot.sh
buildroot/buildroot/: .config
buildroot_conf/: .gitignore  download_buildroot.sh  prepare_buildroot.sh
buildroot_conf/buildroot-2020.11.1/: .config
images/: .gitignore  build.sh  buildUEFI64  build_UEFI64.sh  build_pbaroot.sh  build_rescue.sh  buildpbaroot  buildrescue  check_deps.sh  conf  create_buildroot_config.sh  create_busybox_config.sh  create_kernel_config.sh  create_uclibc_config.sh  flash_rescue.sh  getresources  layout.sfdisk  prepare.sh  prepare.sh_bu
images/buildroot/: syslinux.cfg
images/buildroot/64bit/: .config  busybox.config  kernel.config
images/sedutil/: .gitignore  Config.in  external.desc  external.mk
images/sedutil/board/: build_images.sh  build_rescue.sh  build_uefi.sh  busybox.config  device_table.txt  kernel.config  layout.sfdisk  post_build.sh  syslinux.cfg  uclibc.config
images/sedutil/board/overlay/etc/: inittab
images/sedutil/board/overlay/etc/init.d/: S99PBA.sh
images/sedutil/board/skeleton/etc/: fstab  profile
images/sedutil/configs/: sedutil_defconfig
images/sedutil/package/sedutil-xxc/: Config.in  sedutil-xxc.hash  sedutil-xxc.mk
images/sedutil/package/skeleton-sedutil/: Config.in  skeleton-sedutil.mk
images/sedutil/package/syslinux-sedutil/: Config.in  syslinux-sedutil.mk
images/sedutil/patches/busybox/: 0004-init-log-to-vc1-if-no-syslog.patch  0005-Getty-root-autologin-flag.patch
images/sedutil/patches/linux/: 0001-Change-max-number-of-consoles-to-1.patch
images/sedutil/provides/: skeleton.in
include/: Version.h
include/Common/: DtaAnnotatedDump.h  DtaCommand.h  DtaConstants.h  DtaDev.h  DtaDevEnterprise.h  DtaDevGeneric.h  DtaDevOpal.h  DtaDevOpal1.h  DtaDevOpal2.h  DtaDiskType.h  DtaEndianFixup.h  DtaHashPwd.h  DtaHexDump.h  DtaLexicon.h  DtaOptions.h  DtaResponse.h  DtaSession.h  DtaStructures.h  log.h
include/Common/pbkdf2/: hmac.h  pbkdf2.h  sha2.h
include/LinuxPBA/: GetPassPhrase.h  UnlockSEDs.h
include/linux/: DtaDevLinuxDrive.h  DtaDevLinuxNvme.h  DtaDevLinuxSata.h  DtaDevOS.h  os.h
linux/: DtaDevLinuxDrive.h  DtaDevLinuxNvme.cpp  DtaDevLinuxNvme.h  DtaDevLinuxSata.cpp  DtaDevLinuxSata.h  DtaDevOS.cpp  DtaDevOS.h  PSIDRevert_LINUX.txt  os.h
utils/: GitVersion.sh
windows/: PSIDRevert_WINDOWS.txt
windows/CLI/: CLI.sln  CLI.vcxproj
